[package]
name = "rbatis-py"
version = "0.1.4"
edition = "2021"
description = "Python async database client powered by rbdc (Rust Database Connectivity)"

[lib]
name = "rbatis_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py311"] }
rbdc = { version = "4" }
rbdc-pool-fast = { version = "4" }
rbdc-sqlite = { version = "4" }
rbdc-mysql = { version = "4" }
rbdc-pg = { version = "4" }
rbdc-mssql = { version = "4" }
rbdc-turso = { version = "4", default-features = false, features = ["tls-rustls"] }
rbdc-duckdb = { version = "4" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1"
rbs = { version = "4" }
anyhow = "1"
log = "0.4"
