[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rbatis-py"
version = "0.1.2"
description = "Python bindings for rbatis ORM - high-performance async ORM"
authors = [{ name = "rbatis-py contributors" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/rbatis/rbatis-py"
Source = "https://github.com/rbatis/rbatis-py"
Issues = "https://github.com/rbatis/rbatis-py/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "rbatis_py._core"
